force-app/main/default/objects/gr_Goal__c/fields/gr_Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>gr_Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>