force-app/main/default/objects/gr_Goal__c/fields/gr_Goal_Objective_Text__c.field-meta.xml
<CustomField>
    <fullName>gr_Goal_Objective_Text__c</fullName>
    <label>Goal Objective Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>