force-app/main/default/objects/gr_Goal__c/fields/gr_Goal_Text__c.field-meta.xml
<CustomField>
    <fullName>gr_Goal_Text__c</fullName>
    <description>A description of the direction and focus of a grant program, grant program project, or Federal award project that identifies the change the grant program or Federal award project should advance and/or achieve. Goals serve as the foundation for developing objectives. (263, augmented)</description>
    <label>Goal Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>