force-app/main/default/objects/gr_Goal__c/fields/gr_GoalTechnicalApproachDescription__c.field-meta.xml
<CustomField>
    <fullName>gr_GoalTechnicalApproachDescription__c</fullName>
    <description>A description of the technical approach to the grant program, grant program project, or Federal award project and activities that are intended to be accomplished in order to achieve the goals.</description>
    <label>Goal Technical Approach Description Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>