force-app/main/default/objects/gr_Goal__c/fields/gr_Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>gr_Individual_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>