force-app/main/default/objects/gr_Goal__c/fields/gr_Performance_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>gr_Performance_Type_Code__c</fullName>
    <description>A code denoting if the goal or performance measure is being established or evaluated at the grant program, grant program project, or Federal award project level.</description>
    <label>Performance Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant Program</fullName>
            </value>
            <value>
                <fullName>Grant Program Project</fullName>
            </value>
            <value>
                <fullName>Federal Award Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>